# lc0v6-binpack-converter

./: Cargo.toml  NOTES.txt  Readme.md  fetch_and_convert.py
src/: binpack.rs  fen.rs  main.rs  moves.rs  printer.rs  progress.rs  record.rs  syzygy.rs
