[package]
name = "lc0v6-binpack-converter"
version = "0.1.0"
edition = "2024"
description = "Converts lc0 V6 training data files into .binpack format suitable for stockfish and bullet training"
license = "GPL-3.0s"

[[bin]]
name = "lc0v6-binpack-converter"
path = "src/main.rs"

[dependencies]
flate2 = "1"
sfbinpack = "0.6.2"
shakmaty = "0.30.0"
